--- a/progressive-app/front-end/public/index.html
+++ b/progressive-app/front-end/public/index.html
@@ -16,8 +16,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 
-    <title>React App</title>
+
+    <title>TakeaBunch</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
