--- a/progressive-app/front-end/public/index.html
+++ b/progressive-app/front-end/public/index.html
@@ -21,7 +21,7 @@
 
     <title>TakeaBunch</title>
   </head>
-  <body>
+  <body class="bg-teal-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
