--- a/progressive-app/front-end/public/index.html
+++ b/progressive-app/front-end/public/index.html
@@ -22,6 +22,11 @@
     <title>TakeaBunch</title>
   </head>
   <body class="bg-teal-100">
+    <nav class="flex items-center justify-between flex-wrap bg-gray-800 p-6">
+      <div class="flex items-center flex-shrink-0 text-white mr-6">
+        <span class="font-bold text-xl">🧢TakeABunch💼 Co.</span>
+      </div>
+    </nav>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
